main: refactor + adjust logics
